@@ -1,7 +1,7 @@
 
 
               tDOM - a XML/DOM/XPath/XSLT implementation for Tcl
-                          (Version 0.8.0 alpha)
+                     (Version 0.7.8 / July 7, 2003)
 
 		    Jochen Loewer (loewerj@hotmail.com)
                        Rolf Ade (rolf@pointsman.de)
