@@ -69,10 +69,10 @@ AC_SUBST(TDOMSHELL)
 MAJOR_VERSION=0
 AC_SUBST(MAJOR_VERSION)
 
-MINOR_VERSION=8
+MINOR_VERSION=7
 AC_SUBST(MINOR_VERSION)
 
-PATCHLEVEL=0
+PATCHLEVEL=8
 AC_SUBST(PATCHLEVEL)
 
 # This package name must be replaced statically for AC_SUBST to work
