@@ -36,7 +36,6 @@
 |
 \---------------------------------------------------------------------------*/
 
-#define DEBUG 1
 
 /*----------------------------------------------------------------------------
 |   Includes
