@@ -1,1 +1,1 @@
-#pragma once on#include "tclMacCommonPch.h"#define USE_TCL_STUBS 1#define TDOM_NO_UNKNOWN_CMD#define VERSION "0.8.0"
+#pragma once on#include "tclMacCommonPch.h"#define USE_TCL_STUBS 1#define TDOM_NO_UNKNOWN_CMD#define VERSION "0.7.8"
