@@ -1,17 +1,17 @@
-C See\sfile\n
-D 2003-07-03T19:18:34
+C Fixed\sversion\sstring\sto\s0.7.8\n
+D 2003-07-04T18:17:05
 F CHANGES 59cab3c950a08a20053aa26b3a8718c6efa8c913
-F ChangeLog 778645d0a46b14abe1a8edc3c7e6d871d34b8487
+F ChangeLog 9a7ce0bc530a287a88cc5cdce2244922ccc3faa6
 F LICENSE c9ba7733dcfadb0ce00b4f2b0dd29dfef28a708a
 F Makefile.in 25204720818592a271aecc462432628b5a1862a4
 F NPL-1_1Final.html 844d247f8cb7b5b3d08c7d3cd1acb91f983e5e3e
-F README 5a9c069dee183889e8d81ad355f5091ac97a1a5b
-F README.AOL 6b124cc7a7cae5fa901b9a2996dbdc5fe4085ba7
+F README ff8ab2ccf08056c26036c145eca707d145a5f02f
+F README.AOL ac3f015d5e9dd8cea9a12ad033050407b4c8fb9b
 F aclocal.m4 79e2f4aa6a138371f2d31f28355749e5019d7651
-F apps/xslt.tcl 33eaaf45b831e6613d528156f7f1bbc02fd9f849
-F configure e2a12b701e542383b6ccc3bc9e0cea1d6d0e232f x
-F configure-tcl8.0.5 de905df007af9d276ace4b08d3d2183656f90cb7 x
-F configure.in a1be0e51be1babb7e721723ab9f804ebfd35f693
+F apps/xslt.tcl 36e6c834331ff2eaae4dbc8a9b360db5b9d51566
+F configure 5d859da1d4f7bfa8ce7b65e7d839618273b72cc8 x
+F configure-tcl8.0.5 adb7d5076fb05c3fb7c57a40437231ac0b09f57b x
+F configure.in 4df47424442074c53cebd09f068ef668b082697a
 F doc/README 706bce83708ba3eb9a81452364ab445c79e63ace
 F doc/category-index.html fb9e71a3b204fdcc169c562ea7b8345cdd3d96b9
 F doc/dom.html 0148c1f13ebd6b87fa4a7be1bea24b95690808b9
@@ -115,7 +115,7 @@ F extensions/tnc/test.tcl d9d4c2a1dcd2a7a70096a2a1727f8600ff0c78fd
 F extensions/tnc/tests/all.tcl 845c9dab65c294c3570f69cc731d6fef62efbd03
 F extensions/tnc/tests/loadtnc.tcl 418f1bbca50993a9fe012728b50f0f8080cff2ab
 F extensions/tnc/tests/tnc.test ba2fde4b20537ff0502ba069b353b7525b498e1e
-F extensions/tnc/tnc.c 4eb5d817c334c641af2c76cdb7f30998b5c5b8ed
+F extensions/tnc/tnc.c 11137e7c96a4b1de661a14e9f5602a424acf93d4
 F generic/aolstub.cpp 2ba5a8d1046b7d92c92917ad4e17f8d944b41167
 F generic/dom.c f69e0c968efdff4c8a19948ae8d562010d4241b5
 F generic/dom.h bcdd2648d42a6c6896b23bff2460e65facd5fb53
@@ -132,7 +132,7 @@ F generic/encodings.inc 9fc9705ffe9a8642f0aaba39fcc70119c34128d4
 F generic/expat_config.h 560c148d431f87fc99ae8553cf998f0d01b0db82
 F generic/nodecmd.c c2fe5b784c2ad83c904edd3d82050b8f7c7fc444
 F generic/nodecmd.h 20210ad9b4a3bdd6055175beca7bfdd8bd318a3f
-F generic/tcldom.c 7932ea85a961207f52c1fb09eba08ce07640d01f
+F generic/tcldom.c 90095a48f3837a40f8a3776acf9556e1ad5c8b68
 F generic/tcldom.h 1c21383eabe24ac9bea93e4f5c66f9a64a7b68d1
 F generic/tclexpat.c c42fe2f39afcbb1c68050585fd45f939c0eac21f
 F generic/tclexpat.h 62e83591b9fff070825add84310f7f7cc8cff3b8
@@ -153,8 +153,8 @@ F mac/PrecompHeaders/CoreHeadersMach-O.h 508208239a919a6dee4275f9148962a13faeb94
 F mac/PrecompHeaders/CoreHeadersMach-O.pch 60665d6a2787eb3dfda701baff12dd3d5029e7f5
 F mac/Prefix/expatPrefix.h d131932b0c668d4cdef1eebc35f1b5267882d00d
 F mac/Prefix/expatPrefix_OSX.h 51c7e40981af4b6b8b974bf4cc4c2f63968031e2
-F mac/Prefix/tDOMPrefix.h a8e45947cc4d77e44f125b2e2e8d51828b685e3b
-F mac/Prefix/tDOMPrefix_OSX.h e3e10b1610b1ecfe64a1ce5ad5eaa078672f71e2
+F mac/Prefix/tDOMPrefix.h 48c8b16ffbe5af3f39f31c96207099cdc14767d5
+F mac/Prefix/tDOMPrefix_OSX.h 50ca276eb1b9227e36125a0f6b7d7e5046418457
 F mac/Prefix/tncPrefix.h fb4033860688808a196991f8cce3d6dd81b5eb8e
 F mac/Prefix/tncPrefix_OSX.h 482e243e92a724d677c9e76f9eac956464252299
 F mac/Readme_Mac_Compiling 056f0af20fddfe4c08d0e0e2064c45068335611b
@@ -162,7 +162,7 @@ F mac/macconfig.h b2b5d6e596f07f5d1ff60aab6df666b0acc46adb
 F mac/tDOM.exp d3cefd106ba630c4b283e89bd703754c845da3b4
 F mac/tDOM.prj.xml 46bd1d275171d95875d892c79c57025dedcf485a
 F mac/tDOM.r 26350d07913dd0ba88d8313bc71b92774a029e81
-F mac/tDOM/pkgIndex.tcl 946d3abc06360e9ff6ef9c5f90c953e949962ec3
+F mac/tDOM/pkgIndex.tcl cbdb8b5f9f1faa6e6b5b1d0f24fd8e9abe272c44
 F mac/tDOM/tdom.tcl 09c254af11c857ba27594eba18cfaa14997369dd
 F mac/tDOM_OSX.prj.xml 7876d8fba0620fa19fac268b8f195fb70d70497c
 F mac/tnc.exp b5221cfee6631ca94e46626dcd5c54e7e9cde7ba
@@ -205,7 +205,7 @@ F tests/element.test feb714dae2010efc20dd12d4e7d7bc281b1a6ff4
 F tests/entity.test 8440a2109f4b250b539477b27c141f37ff19c3a3
 F tests/htmlreader.test d39e554d91ce48390e7b5743974b4fad8fc8eeb8
 F tests/i18n.test ad68655284ea0bf4f2c5a0acc098fd05587ba9a4
-F tests/loadtdom.tcl 5e53e167c862051202df871ba249ab502e0ba38d
+F tests/loadtdom.tcl 73e96975f6b73e5e41630cb245d47a4b7195775e
 F tests/namespace.test 35c6d0caef912114f40d35e8ed15ae2a646dfd68
 F tests/parser.test 4f12b3904d42f192b5223be1a30be9692800fb3f
 F tests/pcdata.test d91fbfd9ca0feeff64d930c3b01355fc97ccd03e
@@ -226,7 +226,7 @@ F xe/README 1b4c67a44ba2c29c643a3d646817d21c0ea064c5
 F xe/xe 3f83c3f5659176907d2d2d4a68e14f82f3defd78 x
 F xe/xe-input fb58cbefe5e3acceb9567a165ef7e655ad08b44e
 F xe/xe.bat 8622c5a70666a58d2316df568354c70593848098
-P ed52b2f7fcd7db00643fbb21ae5d961e7a9eb3a7
+P add8b6d8d07545ab393e450c8b4f8f1bce1e786f
 U zoran
-Z 663eeb442feadfb38953eedac04afc77
+Z f5d118a48f8342454ce6ba85f0d2bbf0
 # Remove this line to create a well-formed Fossil manifest.
